# centerlines

./: .gitignore  CMakeLists.txt  CompareCenterlines.cxx  ConvertToStl.cs  ConvertToStl.cxx  README.md  TifHelper.cc  customScript.py  myscript.py
python/: compareCenterlines.py  drawCenterlines.py  preprocessing.py  processing_vmtk.py  tifffile.py
src/: ConvertPlist.cpp  ConvertPlist.h  VtpHelpper.cpp  VtpHelpper.h
